--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ jobs:
         - name: Install
           run: npm install
         - name: Test
-          run: npm run test
+          run: npm test
         - uses: actions/upload-artifact@v1
           if: failure()
           with:
