appium to package.json

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
         "allure-report": "./node_modules/.bin/allure generate --clean ./test/reports/allure-results && allure open",
         "wdio": "wdio run wdio.conf.js"
     },
-    "keywords": [],
+    "keywords": ["webdriverio",
+    "appium"],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "mocha": "^9.2.2",
         "mocha-allure-reporter": "^1.4.0",
         "node-gyp": "^9.0.0",
+        "appium": "^2.0.0-beta.18",
         "webdriverio": "^7.19.3"
     },
     "devDependencies": {
