--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@wdio/cli": "^7.14.1",
         "mocha": "^9.2.2",
         "mocha-allure-reporter": "^1.4.0",
         "node-gyp": "^9.0.0",
