--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "mocha": "^9.2.2",
         "mocha-allure-reporter": "^1.4.0",
         "node-gyp": "^9.0.0",
-        "appium": "^2.0.0-beta.44",
+        "appium": "^1.22.0",
         "webdriverio": "^7.19.3"
     },
     "devDependencies": {
