--- a/package.json
+++ b/package.json
@@ -22,6 +22,16 @@
         "webdriverio": "^7.19.3"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.25.0",
+        "@typescript-eslint/parser": "^5.25.0",
+        "@wdio/appium-service": "^7.19.5",
+        "@wdio/cli": "^7.19.7",
+        "@wdio/local-runner": "^7.19.7",
+        "@wdio/mocha-framework": "^7.19.7",
+        "eslint-plugin-wdio": "^7.19.4",
+        "ts-node": "^10.8.0",
+        "typescript": "^4.6.4",
+        
         "@babel/cli": "^7.17.6",
         "@babel/core": "^7.17.8",
         "@babel/preset-env": "^7.16.11",
@@ -30,16 +40,8 @@
         "@wdio/allure-reporter": "^7.24.0",
         "@wdio/selenium-standalone-service": "^7.19.1",
         "@wdio/spec-reporter": "^7.24.0",
-        "allure-commandline": "^2.18.1",
-        
-        "@wdio/appium-service": "^7.19.5",
-        "@wdio/cli": "^7.19.7",
-        "@wdio/local-runner": "^7.19.7",
-        "@wdio/mocha-framework": "^7.19.7",
-        "eslint-plugin-wdio": "^7.19.4",
-        "ts-node": "^10.8.0",
-        "typescript": "^4.6.4"
-        
+        "allure-commandline": "^2.18.1",         
+
         "chai": "^4.3.6",
         "chromedriver": "^105.0.1",
         "jest": "^28.1.0",
