--- a/package.json
+++ b/package.json
@@ -18,30 +18,23 @@
         "mocha": "^9.2.2",
         "mocha-allure-reporter": "^1.4.0",
         "node-gyp": "^9.0.0",
-        "appium": "^2.0.0-beta.44",
+        "appium": "^1.22.0",
         "webdriverio": "^7.19.3"
     },
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.25.0",
-        "@typescript-eslint/parser": "^5.25.0",
-        "@wdio/appium-service": "^7.19.5",
-        "@wdio/cli": "^7.19.7",
-        "@wdio/local-runner": "^7.19.7",
-        "@wdio/mocha-framework": "^7.24.0",
-        "eslint-plugin-wdio": "^7.19.4",
-        "ts-node": "^10.8.0",
-        "typescript": "^4.6.4",
-        
         "@babel/cli": "^7.17.6",
         "@babel/core": "^7.17.8",
         "@babel/preset-env": "^7.16.11",
         "@babel/register": "^7.17.7",
         "@types/chai": "^4.3.1",
         "@wdio/allure-reporter": "^7.24.0",
+        "@wdio/appium-service": "^7.19.1",
+        "@wdio/cli": "^7.24.0",
+        "@wdio/local-runner": "^7.24.0",
+        "@wdio/mocha-framework": "^7.24.0",
         "@wdio/selenium-standalone-service": "^7.19.1",
         "@wdio/spec-reporter": "^7.24.0",
-        "allure-commandline": "^2.18.1",         
-
+        "allure-commandline": "^2.18.1",
         "chai": "^4.3.6",
         "chromedriver": "^105.0.1",
         "jest": "^28.1.0",
